--- a/html/入门.html
+++ b/html/入门.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<script src="https://unpkg.com/vue"></script>
-		<p><b>NO.1 声明式渲染-插入文本</b></p>
+		<p><b>NO.1 {{}}声明式渲染-插入文本</b></p>
 		<div id="app-1">{{message}}</div>
 		<script>
 			var app1 = new Vue({
@@ -16,7 +16,7 @@
 				}
 			})
 		</script>
-		<p><b>NO.2 绑定Dom元素属性</b></p>
+		<p><b>NO.2 v-bind绑定Dom元素属性</b></p>
 		<div id="app-2">
 			<span v-bind:title = "message">
 				Hover your mouse over me for a few seconds
@@ -64,6 +64,60 @@
 			})
 		</script>
 		<p><b>NO.4 过渡效果...</b></p>
-		
+		<p><b>NO.5处理用户输入</b></p>
+		<h5>——v-on指令绑定监听事件用于调用我们在Vue中定义的方法</h5>
+		<div id="app-5">
+			<p>{{message}}</p>
+			<button v-on:click="reverseMessage">Reverse Message</button>
+		</div>
+		<script>
+			var app5 = new Vue({
+				el:'#app-5',
+				data:{
+					message:'Hello Vue.js'
+				},
+				methods:{
+					reverseMessage:function(){
+						this.message = this.message.split('').reverse().join('');
+					}
+				}
+			})
+		</script>
+		<h5>——v-model指令使得在表单输入和应用状态中做数据绑定变得非常轻巧</h5>
+		<div id="app-6">
+			<p>{{message}}</p>
+			<input type="text" v-model="message" />
+		</div>
+		<script>
+			var app6 = new Vue({
+				el:'#app-6',
+				data:{
+					message:'Hello Vue.js'
+				}
+			})
+		</script>
+		<p><b>用组件构建应用</b></p>
+		<h5>几乎任意类型的界面都可以抽象为组件树，在Vue里组件实际上是拥有预定义选项的一个Vue实例</h5>
+		<div id="app-7">
+			<ol>
+				<todo-item v-for="item in groceryList" v-bind:todo="item"></todo-item>
+			</ol>
+		</div>
+		<script>
+			Vue.component('todo-item',{
+				props:['todo'],
+				template:'<li>{{todo.text}}</li>'
+			})
+			var app7=new Vue({
+				el:'#app-7',
+				data:{
+					groceryList:[
+						{text:'Vegetables'},
+						{text:'fruits'},
+						{text:'whatever else humans are supposed to eat'}
+					]
+				}
+			})
+		</script>
 	</body>
 </html>
