--- a/html/条件渲染.html
+++ b/html/条件渲染.html
@@ -94,6 +94,16 @@
 			})
 		</script>
 		<p><span style="color:red">*注意，<b style="color:orange">label</b>元素仍然会被高效的复用，因为它们没有添加<b style="color:orange">key</b>属性</span></p>
+		<p>#<b style="color:orange">v-show</b>：用法大致与<b style="color:orange">v-if</b>一样</p>
+		<p>*不同的是带有<b style="color:orange">v-show</b>的元素始终会被渲染并保留在DOM中。<b style="color:orange">v-show</b>是简单的切换元素的css属性<b style="color:orange">display</b>。<span style="color:red">注意：v-show不支持&lt;template&gt;语法，也不支持v-else</span></p>
+		<hr />
+		<p>#<b><span style="color:orange">v-if</span>VS<span style="color:orange">v-show</span></b></p>
+		<p><b style="color:orange">v-if</b>是“真正的”条件渲染，因为它会确保在切换过程中条件块内的事件监听和子组件适当的被销毁和重建</p>
+		<p><b style="color:orange">v-if</b>也是惰性的：如果在初始渲染时条件为假，则什么也不做——直到条件第一次变为真时，才会开始渲染条件块</p>
+		<p>相比之下，v-show就简单得多--不管初始条件是什么，元素总是会被渲染，并且只是简单地基于css进行切换。</p>
+		<p>一般来说，<b style="color:orange">v-if</b>有更高的切换开销，而<b style="color:orange">v-show</b>有更高的初始渲染开销。因此，如果需要非常频繁地切换，则使用<b style="color:orange">v-show</b>较好；如果在运营时条件不太可能改变，则使用<b style="color:orange">v-if</b>较好。</p>
+		<p>#<b style="color:orange">v-if</b>与<b style="color:orange">v-for</b>一起使用</p>
+		<p>当v-if与v-for一起使用时，v-for具有比v-if更高的优先级</p>
 	</body>
 	
 </html>
