新增内容分发、组件通信的内容

--- a/html/组件-数据传递.html
+++ b/html/组件-数据传递.html
@@ -77,7 +77,7 @@
 			<li>.sync，双向绑定</li>
 			<li>.once，单次绑定</li>
 		</ul>
-		<p style="color:orange"></p>
+		<p style="color:orange">双向绑定会把子组件的msg属性</p>	
 		<!--单次绑定-->
 		<div id="app4">
 			<input type="text" v-model="info.name"/>
